<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/physio_progress_relative_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.fragmentsphysio.PhysioProgress"
    android:background="@drawable/fragment_layout_round_white_translucent"
    android:layout_margin="30dp">

    <TextView
        android:id="@+id/physio_progress_patient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/physio_progress_patient_name"
        android:textSize="60sp"
        android:padding="20dp"
        android:fontFamily="@font/caveatbrush_regular"
        android:textColor="@color/colorBtnText"/>

    <RadioGroup
        android:id="@+id/physio_progress_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/physio_progress_patient_name"
        android:layout_marginStart="30dp"
        android:checkedButton="@+id/physio_progress_day">

        <RadioButton
            android:id="@+id/physio_progress_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physio_progress_day"
            android:textSize="30sp"/>

        <Spinner
            android:id="@+id/physio_progress_day_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fragment_layout_round_white3"
            android:padding="10dp"
            android:layout_marginStart="20sp"/>

        <RadioButton
            android:id="@+id/physio_progress_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physio_progress_date"
            android:textSize="30sp"
            android:layout_marginStart="100dp"/>

        <TextView
            android:id="@+id/physio_progress_date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physio_progress_date_from"
            android:inputType="date"
            android:textSize="20sp"
            android:layout_marginStart="20sp"
            android:background="@drawable/fragment_layout_round_white3"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/physio_progress_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physio_progress_date_txt"
            android:textSize="30sp"
            android:layout_marginStart="20sp"/>

        <TextView
            android:id="@+id/physio_progress_date_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physio_progress_date_to"
            android:inputType="date"
            android:textSize="20sp"
            android:layout_marginStart="20sp"
            android:background="@drawable/fragment_layout_round_white3"
            android:padding="10dp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/physio_progress_video_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/physio_progress_video_label"
        android:layout_below="@+id/physio_progress_radio_group"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <ListView
        android:id="@+id/physio_progress_video_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/physio_progress_video_label"
        android:layout_marginBottom="170dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:divider="@android:color/transparent"
        android:padding="20dp"
        android:background="@drawable/fragment_layout_round_white3">
    </ListView>

    <Button
        android:id="@+id/physio_progress_btn_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/physio_progress_btn_graph"
        android:textSize="30sp"
        android:fontFamily="@font/caveatbrush_regular"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        android:padding="30dp"
        android:background="@drawable/fragment_layout_round_yellow3" />

    <ProgressBar
        android:id="@+id/loading_progress"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone"/>

</RelativeLayout>