<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserSelection">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginBottom="-50dp"
                android:contentDescription="@string/logo_desc"/>

            <TextView
                android:id="@+id/fullAppName"
                android:text="@string/full_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="45sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="@font/caveatbrush_regular"/>


            <Button
                android:id="@+id/btnPatient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_patient"
                android:textSize="40sp"
                android:background="@drawable/menu_button"
                android:fontFamily="@font/caveatbrush_regular"
                android:width="433dp"
                android:height="86dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="25dp"
                android:textColor="@color/colorBtnText"/>

            <Button
                android:id="@+id/btnPhysio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Physio"
                android:textSize="40sp"
                android:background="@drawable/menu_button"
                android:fontFamily="@font/caveatbrush_regular"
                android:width="433dp"
                android:height="86dp"
                android:textColor="@color/colorBtnText"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/refresh_token_progress"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="gone" />

    </RelativeLayout>

</FrameLayout>